Merged revisions 61644,61646-61647,61649-61652,61656-61658,61663,61665,61667 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r61644 | trent.nelson | 2008-03-19 22:51:16 +0100 (Mi, 19 Mär 2008) | 1 line

  Force a clean of the tcltk/tcltk64 directories now that we've completely changed the tcl/tk build environment.
........
  r61646 | gregory.p.smith | 2008-03-19 23:23:51 +0100 (Mi, 19 Mär 2008) | 2 lines

  Improve the error message when the CRCs don't match.
........
  r61647 | trent.nelson | 2008-03-19 23:41:10 +0100 (Mi, 19 Mär 2008) | 1 line

  Comment out tcltk/tcltk64 removal.
........
  r61649 | raymond.hettinger | 2008-03-19 23:47:48 +0100 (Mi, 19 Mär 2008) | 1 line

  Remove unnecessary traceback save/restore pair.
........
  r61650 | trent.nelson | 2008-03-19 23:51:42 +0100 (Mi, 19 Mär 2008) | 1 line

  Bump the SIGALM delay from 3 seconds to 20 seconds, mainly in an effort to see if it fixes the alarm failures in this test experienced by some of the buildbots.
........
  r61651 | brett.cannon | 2008-03-20 00:01:17 +0100 (Do, 20 Mär 2008) | 5 lines

  Make sure that the warnings filter is not reset or changed beyond the current
  running test file.

  Closes issue2407. Thanks Jerry Seutter.
........
  r61652 | gregory.p.smith | 2008-03-20 00:03:25 +0100 (Do, 20 Mär 2008) | 10 lines

  Prevent ioctl op codes from being sign extended from int to unsigned long
  when used on platforms that actually define ioctl as taking an unsigned long.
  (the BSDs and OS X / Darwin)

  Adds a unittest for fcntl.ioctl that tests what happens with both positive and
  negative numbers.

  This was done because of issue1471 but I'm not able to reproduce -that- problem
  in the first place on Linux 32bit or 64bit or OS X 10.4 & 10.5 32bit or 64 bit.
........
  r61656 | sean.reifschneider | 2008-03-20 01:46:50 +0100 (Do, 20 Mär 2008) | 2 lines

  Issue #2143: Fix embedded readline() hang on SSL socket EOF.
........
  r61657 | sean.reifschneider | 2008-03-20 01:50:07 +0100 (Do, 20 Mär 2008) | 2 lines

  Forgot to add NEWS item about smtplib SSL readline hang fix.
........
  r61658 | trent.nelson | 2008-03-20 01:58:44 +0100 (Do, 20 Mär 2008) | 1 line

  Revert r61650; the intent of this commit was to try and address alarm failures on some of the build slaves.  As Neal points out, it's called after test_main(), so it's not going to factor into the test when run via regrtest.py (and removes the original functionality that Jeffrey wanted that would kill the test if it took longer than 3 seconds to run when executing it directly during development).
........
  r61663 | sean.reifschneider | 2008-03-20 04:20:48 +0100 (Do, 20 Mär 2008) | 2 lines

  Issue 2188: Documentation hint about disabling proxy detection.
........
  r61665 | gregory.p.smith | 2008-03-20 06:41:53 +0100 (Do, 20 Mär 2008) | 7 lines

  Attempt to fix the Solaris Sparc 10 buildbot.  It was failing with an invalid
  argument error on ioctl.  This was caused by the added test_fcntl ioctl test
  that hard coded 0 as the fd to use.  Without a terminal, this fails on solaris.
  (it passed from the command line on sol 10, both 32 and 64 bit)

  Also, test_ioctl exists so I moved the test into there where it belongs.
........
  r61667 | georg.brandl | 2008-03-20 08:25:55 +0100 (Do, 20 Mär 2008) | 2 lines

  #2383: remove obsolete XXX comment in stat.py.
........