Objects/abstract.c
@@ -2598,14 +2598,11 @@ int
 PyObject_IsInstance(PyObject *inst, PyObject *cls)
 {
 	static PyObject *name = NULL;
-	PyObject *t, *v, *tb;
 	PyObject *checker;
 
 	/* Quick test for an exact match */
 	if (Py_TYPE(inst) == (PyTypeObject *)cls)
 		return 1;
-
-	PyErr_Fetch(&t, &v, &tb);
 
 	if (name == NULL) {
 		name = PyUnicode_InternFromString("__instancecheck__");
@@ -2613,7 +2610,8 @@ PyObject_IsInstance(PyObject *inst, PyObject *cls)
 			return -1;
 	}
 	checker = PyObject_GetAttr(cls, name);
-	PyErr_Restore(t, v, tb);
+	if (checker == NULL && PyErr_Occurred())
+		PyErr_Clear();
 	if (checker != NULL) {
 		PyObject *res;
 		int ok = -1;
